# PS2-Redump-downloader

./: .gitignore  Cargo.toml  README.md  config.ini
src/: config.rs  downloader.rs  lib.rs  main.rs  models.rs  scraper.rs  utils.rs
