[package]
name = "ps2-redump-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client and HTML parsing
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.18"
tokio = { version = "1.0", features = ["full"] }

# File operations and compression
zip = "0.6"

# Configuration parsing
configparser = "3.0"

# Progress bars and UI
indicatif = "0.17"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform file opening
open = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
futures = "0.3"
futures-util = "0.3"
